--- a/DemoMaven/pom.xml
+++ b/DemoMaven/pom.xml
@@ -1,19 +1,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.xworkz</groupId>
-  <artifactId>Maven-demo</artifactId>
+  <artifactId>DemoMaven</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <properties>
-  <spring.version>5.3.26</spring.version>
+  <spring.version>5.3.24</spring.version>
   </properties>
- <dependencies>
- <dependency>
- <groupId>org.springframework</groupId>
- <artifactId>spring-content</artifactId>
- <version>${spring.version}</version>
- </dependency>
- 
- </dependencies>
+  <dependencies>
+  <dependency>
+  <groupId>org.springframework</groupId>
+  <artifactId>spring-context</artifactId>
+  <version>${spring.version}</version>
+  </dependency>
+  </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
@@ -21,7 +20,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <release>15</release>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
     </plugins>
